--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,12 @@ pnpm-debug.log*
 lerna-debug.log*
 
 node_modules
+/node_modules
 dist
 dist-ssr
 *.local
+
+package-lock.json
 
 # Editor directories and files
 .vscode/*
