update - delete unnecessary images, add .env, fix navbar logo

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "e_com-fontend",
+  "name": "gadget-bucket",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -20,6 +20,7 @@
     "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@types/node": "^20.12.7",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
